--- a/UnsafeEnviroments/UnsafeEnviroments.vcxproj.filters
+++ b/UnsafeEnviroments/UnsafeEnviroments.vcxproj.filters
@@ -18,12 +18,18 @@
     <ClInclude Include="framework.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="main.h">
+    <ClInclude Include="public\Main.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="public\Utils.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="dllmain.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="private\Main.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
