--- a/UnsafeEnvironment/UnsafeEnvironment.vcxproj
+++ b/UnsafeEnvironment/UnsafeEnvironment.vcxproj
@@ -14,7 +14,7 @@
     <VCProjectVersion>17.0</VCProjectVersion>
     <Keyword>Win32Proj</Keyword>
     <ProjectGuid>{d1af0e78-af53-4db8-8083-df807cff9f5f}</ProjectGuid>
-    <RootNamespace>UnsafeEnviroments</RootNamespace>
+    <RootNamespace>UnsafeEnvironment</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
